[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://button.png" type="Texture" id=2]
[ext_resource path="res://SwipeControl.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SwipeControl" type="ScrollContainer"]
margin_right = 1300.0
margin_bottom = 256.0
mouse_filter = 1
scroll_vertical_enabled = false
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1934.0
margin_bottom = 244.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 75

[node name="Button" type="Button" parent="HBoxContainer"]
margin_top = 69.0
margin_right = 212.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Bark"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 287.0
margin_top = 69.0
margin_right = 499.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Howl"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 574.0
margin_top = 69.0
margin_right = 786.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Attack"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Button4" type="Button" parent="HBoxContainer"]
margin_left = 861.0
margin_top = 69.0
margin_right = 1073.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Donut"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Button5" type="Button" parent="HBoxContainer"]
margin_left = 1148.0
margin_top = 69.0
margin_right = 1360.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Sleep"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Button6" type="Button" parent="HBoxContainer"]
margin_left = 1435.0
margin_top = 69.0
margin_right = 1647.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Tam O'Shanter"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Button7" type="Button" parent="HBoxContainer"]
margin_left = 1722.0
margin_top = 69.0
margin_right = 1934.0
margin_bottom = 175.0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Exit"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[connection signal="exit" from="." to="." method="_on_SwipeControl_exit"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="HBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="HBoxContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="HBoxContainer/Button7" to="." method="_on_Button7_pressed"]
